css/custom.css
body {
  font-family: "Titillium Web", sans-serif;
  background-image: url("../img/background.png");
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: 100% 50%;
}

.navbar-header > a {
  font-size: 28px;
}

.navbar {
  float: right;
  width: 100%;
}

.nav {
  float: right;
}

.nav > button {
  font-size: 20px;
  float: right;
  background-color: #fff;
  border: none;
  align-self: right;
}

.nav > button > h5 {
  font-size: 20px;
  color: #007bff;
  padding: 5% 20%;
}

.nav > button > h5:hover {
  color: #0056b3;
  cursor: pointer;
}

.nav > button:focus {
  outline: none;
}

.underline {
  background-image: linear-gradient(black, black);
  background-size: 0 1px;
  background-repeat: no-repeat;
  background-position: center bottom;
  transition: all .3s ease-out;
}

.underline:hover {
  text-decoration: none;
  background-size: 70% 1px;
}

.top-buffer{
  margin-top: 15vh;
}

.img-max {
  max-width: 100%;
  height: auto;
}

#links {
  background-color: #77bbff;
  border-bottom-left-radius:0.25rem;
  border-bottom-right-radius:0.25rem;
  padding: 1% 0%;
}

.text-decoration-none:hover {
  text-decoration: none;
}

.text-black {
  color: #000;
}

.buffer {
  margin-top: 45vh;
}

